2001-09-17  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (get_start_tag): added few \n
	(get_end_tag): ditto, use need_list_end instead of need_list_begin

2001-09-16  Radek Doulik  <rodo@ximian.com>

	* htmlcluev.c (find_free_area): fixed test for checking if margins
	changed

2001-09-14  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (calc_size): take care of case when lmargin >=
	rmargin, could happen if there is wide aligned object, which takes
	whole max_width, so we must find another free area, otherwise we
	end in infinite loop, where width_left <= 0
	(calc_size): recalc margins only if area was sufficient, in other
	case we have already calculated new and right margins and there
	they were recalculated to wrong values, which could trap us in an
	infinite loop

	* htmltextslave.c(slave_split_if_too_long): new function, use
	html_object_calc_abs_position to calc absolute slave position and
	bound width by MAX_WIDGET_WIDTH - x
	(calc_size): if slave width > max_width, use slave_split_if_too_long

	* htmlengine.c (html_engine_calc_size): don't use min_width as
	lower bound of max_width

	* htmltable.c (html_table_set_max_width): calc max_width as MAX
	(max_width, min_width)

2001-09-13  Larry Ewing  <lewing@ximian.com>

	* htmlengine-save.c (html_engine_save_encode): actually free the
	encoding buffer.  Wow that was a huge leak, fixes ximian #9691.

2001-09-12  Larry Ewing  <lewing@ximian.com>

	* htmlgdkpainter.c (alloc_e_font_try): free the temp strings even
	if we exit with and error.

2001-09-12  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c (alloc_e_font_do): renamed from alloc_e_font
	(alloc_e_font): if we cannot alloc font with requsted style, try
	to allocate simplified styles of the same face before we fallback
	to fixed
	(alloc_e_font_try): use gdk_font_load and then
	e_font_from_gdk_font instead of e_font_from_gdk_name to avoid
	fixed font creation
	(alloc_e_font_try): comment out fixed font test which was
	probably wrong