@@ -1,5 +1,12 @@
 2001-09-17  Radek Doulik  <rodo@ximian.com>
 
+	* htmlengine-edit.c (html_engine_prev_cell): don't call
+	gtk_html_edit_make_cursor_visible
+	(html_engine_next_cell): ditto
+
+	* gtkhtml.c (destroy): move gconf related code before html->priv
+	is freed
+
 	* htmlclueflow.c (get_start_tag): added few \n
 	(get_end_tag): ditto, use need_list_end instead of need_list_begin
 
